# Galaga

./: Cargo.toml  LICENSE.md  README.md  capturing-keypresses_Linux_Mac_Terminal  layout.txt
src/: SCAPEGAME.rs  background.rs  fly_patterns.rs  game.rs  game_over.rs  game_state.rs  main.rs  player.rs  rules🫣.notes  score_display.rs  server.rs  settings.rs  settings_display.rs  ship.rs  structs.rs  working_keys.rs
src/archive/: BIGSW.rs  keyboardreader.rs  map.txt  note.txt  old_gamestate_with_image_node.rs  oldgame_state.rs  oldmain.rs  oldship.rs
